[workspace.package]
version = "1.0.0"
authors = ["Polkadot Fellowship"]
edition = "2021"
repository = "https://github.com/polkadot-fellows/runtimes.git"
license = "GPL-3.0-only"                                        # TODO <https://github.com/polkadot-fellows/runtimes/issues/29>

[workspace.dependencies]
assert_matches = { version = "1.5.0" }
approx = { version = "0.5.1" }
asset-hub-kusama-emulated-chain = { path = "integration-tests/emulated/chains/parachains/assets/asset-hub-kusama" }
asset-hub-kusama-runtime = { path = "system-parachains/asset-hubs/asset-hub-kusama" }
asset-hub-polkadot-emulated-chain = { path = "integration-tests/emulated/chains/parachains/assets/asset-hub-polkadot" }
asset-hub-polkadot-runtime = { path = "system-parachains/asset-hubs/asset-hub-polkadot" }
asset-test-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
assets-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
authority-discovery-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false, package = "sp-authority-discovery" }
babe-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false, package = "sp-consensus-babe" }
beefy-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false, package = "sp-consensus-beefy" }
binary-merkle-tree = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-asset-hub-kusama = { path = "system-parachains/asset-hubs/asset-hub-kusama/primitives", default-features = false }
bp-asset-hub-polkadot = { path = "system-parachains/asset-hubs/asset-hub-polkadot/primitives", default-features = false }
bp-bridge-hub-cumulus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-bridge-hub-kusama = { path = "system-parachains/bridge-hubs/bridge-hub-kusama/primitives", default-features = false }
bp-bridge-hub-polkadot = { path = "system-parachains/bridge-hubs/bridge-hub-polkadot/primitives", default-features = false }
bp-header-chain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-messages = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-parachains = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-polkadot-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-proof-root-store = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-relayers = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-xcm-bridge = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-xcm-bridge-hub = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-xcm-bridge-hub-router = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bp-xcm-bridge-router = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bridge-hub-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
bridge-hub-kusama-emulated-chain = { path = "integration-tests/emulated/chains/parachains/bridges/bridge-hub-kusama" }
bridge-hub-kusama-runtime = { path = "system-parachains/bridge-hubs/bridge-hub-kusama" }
bridge-hub-polkadot-emulated-chain = { path = "integration-tests/emulated/chains/parachains/bridges/bridge-hub-polkadot" }
bridge-hub-polkadot-runtime = { path = "system-parachains/bridge-hubs/bridge-hub-polkadot" }
bridge-hub-test-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
bridge-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
clap = { version = "4.5.0" }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false }
collectives-polkadot-emulated-chain = { path = "integration-tests/emulated/chains/parachains/collectives/collectives-polkadot" }
collectives-polkadot-runtime = { path = "system-parachains/collectives/collectives-polkadot" }
collectives-polkadot-runtime-constants = { path = "system-parachains/collectives/collectives-polkadot/constants" }
coretime-kusama-emulated-chain = { path = "integration-tests/emulated/chains/parachains/coretime/coretime-kusama" }
coretime-kusama-runtime = { path = "system-parachains/coretime/coretime-kusama" }
coretime-polkadot-emulated-chain = { path = "integration-tests/emulated/chains/parachains/coretime/coretime-polkadot" }
coretime-polkadot-runtime = { path = "system-parachains/coretime/coretime-polkadot" }
encointer-balances-tx-payment = { version = "~15.1.0", default-features = false }
encointer-balances-tx-payment-rpc-runtime-api = { version = "~15.1.0", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
emulated-integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
encointer-kusama-runtime = { path = "system-parachains/encointer" }
encointer-primitives = { version = "~15.4.0", default-features = false }
enumflags2 = { version = "0.7.7" }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
glutton-kusama-runtime = { path = "system-parachains/gluttons/glutton-kusama" }
grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", package = "sc-consensus-grandpa" }
hex-literal = { version = "0.4.1" }
integration-tests-helpers = { path = "integration-tests/emulated/helpers" }
kusama-emulated-chain = { path = "integration-tests/emulated/chains/relays/kusama" }
kusama-polkadot-system-emulated-network = { path = "integration-tests/emulated/networks/kusama-polkadot-system" }
kusama-runtime = { path = "relay/kusama", package = "staging-kusama-runtime" }
kusama-runtime-constants = { path = "relay/kusama/constants", default-features = false }
kusama-system-emulated-network = { path = "integration-tests/emulated/networks/kusama-system" }
log = { version = "0.4.21", default-features = false }
pallet-alliance = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-asset-conversion = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-asset-conversion-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-asset-rate = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-bags-list = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-beefy = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-bridge-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-bridge-messages = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-bridge-parachains = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-bridge-proof-root-store = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-bridge-proof-root-sync = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-bridge-relayers = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-broker = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-child-bounties = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-core-fellowship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-encointer-balances = { version = "~15.2.0", default-features = false }
pallet-encointer-bazaar = { version = "~15.1.0", default-features = false }
pallet-encointer-bazaar-rpc-runtime-api = { version = "~15.1.0", default-features = false }
pallet-encointer-ceremonies = { version = "~15.1.0", default-features = false }
pallet-encointer-ceremonies-rpc-runtime-api = { version = "~15.1.0", default-features = false }
pallet-encointer-communities = { version = "~15.1.0", default-features = false }
pallet-encointer-communities-rpc-runtime-api = { version = "~15.1.0", default-features = false }
pallet-encointer-democracy = { version = "~15.4.0", default-features = false }
pallet-encointer-faucet = { version = "~15.2.0", default-features = false }
pallet-encointer-reputation-commitments = { version = "~15.1.0", default-features = false }
pallet-encointer-scheduler = { version = "~15.1.0", default-features = false }
pallet-encointer-treasuries = { version = "~15.4.1", default-features = false }
pallet-encointer-treasuries-rpc-runtime-api = { version = "~15.3.0", default-features = false }
pallet-fast-unstake = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-glutton = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-nft-fractionalization = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-nfts = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-nfts-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-nis = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-migrations = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-nomination-pools = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-parameters = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-ranked-collective = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-remote-proxy = { path = "pallets/remote-proxy", default-features = false }
pallet-salary = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-society = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-delegated-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-staking-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-state-trie-migration = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-whitelist = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-xcm-bridge = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-xcm-bridge-hub = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-xcm-bridge-hub-router = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
pallet-xcm-bridge-router = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false, package = "staging-parachain-info" }
parachains-common = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
parachains-runtimes-test-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
paste = { version = "1.0.14" }
penpal-emulated-chain = { path = "integration-tests/emulated/chains/parachains/testing/penpal" }
penpal-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
people-kusama-emulated-chain = { path = "integration-tests/emulated/chains/parachains/people/people-kusama" }
people-kusama-runtime = { path = "system-parachains/people/people-kusama" }
people-polkadot-emulated-chain = { path = "integration-tests/emulated/chains/parachains/people/people-polkadot" }
people-polkadot-runtime = { path = "system-parachains/people/people-polkadot" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
polkadot-emulated-chain = { path = "integration-tests/emulated/chains/relays/polkadot" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
polkadot-runtime = { path = "relay/polkadot" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
polkadot-runtime-constants = { path = "relay/polkadot/constants", default-features = false }
polkadot-system-emulated-network = { path = "integration-tests/emulated/networks/polkadot-system" }
primitive-types = { version = "0.12.2", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
remote-externalities = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", package = "frame-remote-externalities" }
runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false, package = "polkadot-runtime-parachains" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
scale-info = { version = "2.10.0", default-features = false }
separator = { version = "0.4.1" }
serde = { version = "1.0.196" }
serde_json = { version = "1.0.113", default-features = false }
smallvec = { version = "1.13.1" }
snowbridge-router-primitives = { version = "0.18.1", default-features = false }
snowbridge-beacon-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
snowbridge-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
snowbridge-outbound-queue-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
snowbridge-pallet-ethereum-client = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
snowbridge-pallet-inbound-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
snowbridge-pallet-inbound-queue-fixtures = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
snowbridge-pallet-ethereum-client-fixtures = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
snowbridge-pallet-outbound-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
snowbridge-pallet-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
snowbridge-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
snowbridge-runtime-test-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
snowbridge-system-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
system-parachains-constants = { path = "system-parachains/constants", default-features = false }
tokio = { version = "1.36.0" }
xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false, package = "staging-xcm" }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false, package = "staging-xcm-builder" }
xcm-emulator = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch" }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false, package = "staging-xcm-executor" }
xcm-runtime-apis = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "bko-permlanes-on-ahs-4-local-dispatch", default-features = false }
anyhow = { version = "1.0.82" }
subxt = { version = "0.38.1" }
tracing-subscriber = { version = "0.3.18" }
zombienet-sdk = { version = "0.2.30" }
tuplex = { version = "0.1.0", default-features = false }
relay-common = { path = "relay/common", default-features = false }
ss58-registry = { version = "1.47.0" }

[workspace]
resolver = "2"

members = [
	"chain-spec-generator",
	"integration-tests/emulated/chains/parachains/assets/asset-hub-kusama",
	"integration-tests/emulated/chains/parachains/assets/asset-hub-polkadot",
	"integration-tests/emulated/chains/parachains/bridges/bridge-hub-kusama",
	"integration-tests/emulated/chains/parachains/bridges/bridge-hub-polkadot",
	"integration-tests/emulated/chains/parachains/collectives/collectives-polkadot",
	"integration-tests/emulated/chains/parachains/coretime/coretime-kusama",
	"integration-tests/emulated/chains/parachains/coretime/coretime-polkadot",
	"integration-tests/emulated/chains/parachains/people/people-kusama",
	"integration-tests/emulated/chains/parachains/people/people-polkadot",
	"integration-tests/emulated/chains/parachains/testing/penpal",
	"integration-tests/emulated/chains/relays/kusama",
	"integration-tests/emulated/chains/relays/polkadot",
	"integration-tests/emulated/helpers",
	"integration-tests/emulated/networks/kusama-polkadot-system",
	"integration-tests/emulated/networks/kusama-system",
	"integration-tests/emulated/networks/polkadot-system",
	"integration-tests/emulated/tests/assets/asset-hub-kusama",
	"integration-tests/emulated/tests/assets/asset-hub-polkadot",
	"integration-tests/emulated/tests/bridges/bridge-hub-kusama",
	"integration-tests/emulated/tests/bridges/bridge-hub-polkadot",
	"integration-tests/emulated/tests/collectives/collectives-polkadot",
	"integration-tests/emulated/tests/coretime/coretime-kusama",
	"integration-tests/emulated/tests/coretime/coretime-polkadot",
	"integration-tests/emulated/tests/people/people-kusama",
	"integration-tests/emulated/tests/people/people-polkadot",
	"integration-tests/zombienet",
	"pallets/remote-proxy",
	"relay/common",
	"relay/kusama",
	"relay/kusama/constants",
	"relay/polkadot",
	"relay/polkadot/constants",
	"system-parachains/asset-hubs/asset-hub-kusama",
	"system-parachains/asset-hubs/asset-hub-kusama/primitives",
	"system-parachains/asset-hubs/asset-hub-polkadot",
	"system-parachains/asset-hubs/asset-hub-polkadot/primitives",
	"system-parachains/bridge-hubs/bridge-hub-kusama",
	"system-parachains/bridge-hubs/bridge-hub-kusama/primitives",
	"system-parachains/bridge-hubs/bridge-hub-polkadot",
	"system-parachains/bridge-hubs/bridge-hub-polkadot/primitives",
	"system-parachains/collectives/collectives-polkadot",
	"system-parachains/collectives/collectives-polkadot/constants",
	"system-parachains/constants",
	"system-parachains/coretime/coretime-kusama",
	"system-parachains/coretime/coretime-polkadot",
	"system-parachains/encointer",
	"system-parachains/gluttons/glutton-kusama",
	"system-parachains/people/people-kusama",
	"system-parachains/people/people-polkadot",
]

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch.crates-io]
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git" }