[package]
name = "bp-asset-hub-kusama"
description = "Primitives of AssetHubKusama parachain runtime."
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# Local
system-parachains-constants = { workspace = true }

# Bridge Dependencies
bp-bridge-hub-cumulus = { workspace = true }
bp-messages = { workspace = true }
bp-proof-root-store = { workspace = true }
bp-runtime = { workspace = true }
bp-xcm-bridge-hub-router = { workspace = true }
bp-xcm-bridge = { workspace = true }
bp-xcm-bridge-router = { workspace = true }

# Substrate Based Dependencies
frame-support = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot
xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-bridge-hub-cumulus/std",
	"bp-messages/std",
	"bp-proof-root-store/std",
	"bp-runtime/std",
	"bp-xcm-bridge-hub-router/std",
	"bp-xcm-bridge-router/std",
	"bp-xcm-bridge/std",
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"system-parachains-constants/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"system-parachains-constants/runtime-benchmarks",
]
